# FTIR_OMNIC_MAP_Reader

./: README.md  pyproject.toml
src/ftir_map/: LoadOmnicArrayMAP.py  LoadOmnicMAP.py  PyMca_Array_OmnicMap.py  PyMca_OmnicMap.py  testpoint.py
